# ggml

./: .gitignore  CMakeLists.txt  README-xzl.txt  README.md  impact on cpufreq by FL.txt  run-whisper.sh  test-matmul0-measured by FL.md
examples/: common-ggml.cpp
examples/mnist/: main-cnn.cpp  main-cpu.cpp  main-mtl.cpp  main-mtl.m  main.cpp
examples/whisper/: CMakeLists.txt  main.cpp  quantize.cpp  whisper-sample-dbgoutput-by-FL.txt  whisper.cpp
include/ggml/: ggml-alloc.h  ggml-backend.h  ggml.h
m2-gpu-measurement-by-FL.rtfd/: TXT.rtf
src/: CMakeLists.txt  ggml-alloc.c  ggml-backend-impl.h  ggml-backend.c  ggml-metal.m  ggml-metal.metal  ggml-opencl.cpp  ggml-opencl.h  ggml-quants.c  ggml-quants.h  ggml.c
tests/: test-backend-buffer.cpp  test-blas0.c  test-conv1d.cpp  test-conv2d.cpp  test-mul-mat.cpp  test-mul-mat0.c  test-mul-mat1.c  test-mul-mat2.c  test-opt.cpp  test1.c
